# ll

./: .gitignore  README.md  layout.cabal  that-code-from-before.hs  transcript.md  transcript2.md
src/: Interpret.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs  Type.hs  Value.hs  typecheck.hs
src/Lexer/: Support.hs
test/: Test.hs
test/data/: that-code-from-before
