name:                layout
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/plt-hokusai/layout#readme
license:             BSD3
license-file:        LICENSE
author:              Abigail Magalhães
maintainer:          me@abby.how
copyright:           2021 Abigail Magalhães
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable layout
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5 && < 0.6
                     , mtl
                    
  build-tool-depends:  alex:alex >= 3.2.4 && < 4.0
                    ,  happy:happy >= 1.19.12 && < 2.0

  other-modules:       Syntax, Lexer, Lexer.Support, Parser
