name:                layout
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/plt-hokusai/layout#readme
license:             BSD3
license-file:        LICENSE
author:              Abigail Magalhães
maintainer:          me@abby.how
copyright:           2021 Abigail Magalhães
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable layout
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.7
                     , mtl
                    
  build-tool-depends:  alex:alex >= 3.2.4 && < 4.0
                    ,  happy:happy >= 1.19.12 && < 2.0

  other-modules:       Syntax, Lexer, Lexer.Support, Parser, Interpret, Value, Type, TypeCheck



Test-Suite Test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test, src
  ghc-options: -Wall
  other-modules:       Syntax, Lexer, Lexer.Support, Parser, Interpret, Value
  build-tool-depends:  alex:alex >= 3.2.4 && < 4.0
                    ,  happy:happy >= 1.19.12 && < 2.0
  build-depends:
      base            >=4.12  && <5
    , text
    , mtl
    , containers
    , array
    -- , hashable
    , directory
    -- , bytestring
    , binary
    , HUnit >= 1.3
    , QuickCheck 
    , network
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , random
    , transformers
    , exceptions
  main-is: Test.hs
